--- a/docs/app.css
+++ b/docs/app.css
@@ -180,7 +180,7 @@
 .actor-item.actor-eggrobo[data-animation="running"] .sprite:after {
 	--sprite-offset-x: 0px;
 	--sprite-offset-y: -64px;
-	animation: eggrobo-walk steps(3) infinite 128ms;
+	animation: eggrobo-walk steps(3) infinite 192ms;
 }
 
 .actor-item.actor-eggrobo[data-animation="jumping"] .sprite:after {
@@ -711,42 +711,6 @@
 	background-image: url(/castlevania/window.png);
 }
 
-.actor-item.actor-star-post .sprite {
-	background-image: url(/Sonic/star-post.png);
-	height: 48px;
-	width: 16px;
-}
-
-.actor-star-post {
-	z-index:1;
-}
-
-.star-post-head {
-	background-image: url(/Sonic/star-post-head.png);
-	width: 16px;
-	height: 16px;
-	position: absolute;
-	top: -60px;
-	left: -8px;
-	transform-origin: bottom center;
-	--sprite-offset-x: 0px;
-	--sprite-offset-y: 0px;
-}
-
-.actor-star-post[data-active="true"] .star-post-head {
-	animation: spin2x 1 ease-in-out 0.75s both, starPostActive steps(2) 10ms  0.5s infinite;
-}
-
-.actor-star-post[data-active="true"][direction="-1"] .star-post-head {
-	animation-direction: reverse;
-}
-
-.actor-item.actor-star-post .sprite {
-	background-image: url(/Sonic/star-post.png);
-	height: 48px;
-	width: 16px;
-}
-
 .actor-item[data-mode="0"] .sprite {
 	transform: translate(-50%, calc(-100% + 1px));
 }
@@ -1070,6 +1034,55 @@
 	top: -52px;
 }
 
+.actor-item.actor-star-post .sprite {
+	background-image: url(/Sonic/star-post.png);
+	height: 48px;
+	width: 16px;
+}
+
+.actor-star-post {
+}
+
+.star-post-head-box {
+	z-index:1;
+	position: absolute;
+	top: -60px;
+	left: -8px;
+}
+
+.star-post-head,
+.star-post-head-box {
+	width: 16px;
+	height: 16px;
+	transform-origin: bottom center;
+}
+
+.star-post-head {
+	background-image: url(/Sonic/star-post-head.png);
+	--sprite-offset-x: 0px;
+	--sprite-offset-y: 0px;
+}
+
+.actor-star-post[data-spin="true"] .star-post-head-box {
+	animation: spin2x 1 ease-in-out 750ms both;
+	width: 16px;
+	height: 16px;
+}
+
+.actor-star-post[data-active="true"] .star-post-head {
+	animation: starPostActive steps(2) 10ms 0.5s infinite;
+}
+
+.actor-star-post[data-active="true"][direction="-1"] .star-post-head {
+	animation-direction: reverse;
+}
+
+.actor-item.actor-star-post .sprite {
+	background-image: url(/Sonic/star-post.png);
+	height: 48px;
+	width: 16px;
+}
+
 .actor-item.actor-tails .sprite {
 	height: 64px;
 	width: 64px;
@@ -1199,6 +1212,11 @@
 	left: -10px;
 	transform-origin: 42px 16px;
 	transform: rotate(calc(0deg + calc(1rad * var(--air-angle))));
+}
+
+.actor-item.actor-tails[data-animation="jumping"][data-facing="left"] .tails-tails,
+.actor-item.actor-tails[data-animation="rolling"][data-facing="left"] .tails-tails {
+	transform: rotate(calc(180deg - calc(1rad * var(--air-angle))));
 }
 
 .actor-item.actor-tails[data-animation="flying"] .tails-tails {
