--- a/app/titlecard/titlecard.css
+++ b/app/titlecard/titlecard.css
@@ -68,11 +68,11 @@
 }
 
 .titlecard-title-line-1 {
-	transform: translateX(calc(1% * var(--timer)));
+	transform: translateX(calc(1px + calc(1% * var(--timer))));
 }
 
 .titlecard-title-line-2 {
-	transform: translateX(calc(1% * var(--timer2)));
+	transform: translateX(calc(1px + calc(1% * var(--timer2))));
 }
 
 .titlecard-title-number {
@@ -125,7 +125,7 @@
 
 .titlecard-border-text {
 	transition: transform var(--tFunc);
-	transform: translateX(calc(1% * var(--timer2)));
+	transform: translateX(calc(3px + calc(1% * var(--timer2))));
 	position: absolute;
 	top: 10px;
 	right: 0px;
