--- a/docs/app.css
+++ b/docs/app.css
@@ -1,5 +1,5 @@
 .actor-eggmobile {
-	mix-blend-mode: exclusion;
+	z-index: 1;
 }
 
 .actor-eggmobile .sprite {
@@ -8,7 +8,6 @@
 	height: 45px !important;
 	width:  70px !important;
 
-	z-index: 1;
 
 	--sprite-offset-x: 0px;
 	--sprite-offset-y: -0px;
@@ -136,7 +135,7 @@
 	width: 32px;
 	height: 32px;
 	position: absolute;
-	transition: animation-duration 0.5s ease-in-out;
+	transition: animation-duration 0.75s ease-in-out;
 }
 
 .actor-item.actor-drill-car[data-animation='walking'] .drill-car-tire {
@@ -145,7 +144,7 @@
 	--animation-steps: 2;
 	--animation-width: 32px;
 	animation: drill-car-animate steps(var(--animation-steps)) infinite;
-	animation-duration: 128ms;
+	animation-duration: 96ms;
 }
 
 .actor-item.actor-drill-car[data-animation='running'] .drill-car-tire {
@@ -154,7 +153,7 @@
 	--animation-steps: 2;
 	--animation-width: 32px;
 	animation: drill-car-animate steps(var(--animation-steps)) infinite;
-	animation-duration: 64ms;
+	animation-duration: 32ms;
 }
 
 .actor-item.actor-drill-car[data-animation='skidding'] .drill-car-tire {
@@ -163,7 +162,7 @@
 	--animation-steps: 2;
 	--animation-width: 32px;
 	animation: drill-car-animate steps(var(--animation-steps)) infinite;
-	animation-duration: 256ms;
+	animation-duration: 192ms;
 }
 
 .actor-item.actor-drill-car[data-animation='walking'] .drill-car-tire-front-b,
@@ -1671,6 +1670,7 @@ h1 {
 	font-style: normal;
 }
 
+
 .titlecard,
 .titlecard-field,
 .titlecard-border-color,
@@ -2348,6 +2348,15 @@ span.button-index .button,
 span.button-index b{
 	margin-left: 0.5em;
 	margin-right: 0.5em;
+}
+
+.viewport-actors,
+.viewport-particles {
+	display: contents;
+}
+
+.viewport-particles {
+	pointer-events: none;
 }
 
 
